// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> with additional className matches its snapshot 1`] = `
<TooltipHost
  calloutProps={
    Object {
      "beakWidth": 8,
      "doNotLayer": true,
      "preventDismissOnScroll": true,
    }
  }
  className="y-tooltip--callout"
  content="text content"
  delay={1}
  hostClassName="y-tooltip TEST_CLASSNAME"
/>
`;

exports[`<Tooltip /> with default options matches its snapshot 1`] = `
<TooltipHost
  calloutProps={
    Object {
      "beakWidth": 8,
      "doNotLayer": true,
      "preventDismissOnScroll": true,
    }
  }
  className="y-tooltip--callout"
  content="text content"
  delay={1}
  hostClassName="y-tooltip"
>
  text
</TooltipHost>
`;

exports[`<Tooltip /> with directionalHint matches its snapshot 1`] = `
<TooltipHost
  calloutProps={
    Object {
      "beakWidth": 8,
      "doNotLayer": true,
      "preventDismissOnScroll": true,
    }
  }
  className="y-tooltip--callout"
  content="text content"
  delay={1}
  directionalHint={4}
  hostClassName="y-tooltip"
/>
`;
